@@ -1,5 +1,8 @@
+2010-04-13  Theodore Kilgore <kilgota@auburn.edu>
+	* library.c: Lots of cameras added to the camera list.
+
 2009-04-16  Theodore Kilgore <kilgota@auburn.edu>
-	* README.jl2005c: Updated. 
+	* README.jl2005c: Updated.
 
 2008-07-11  Theodore Kilgore <kilgota@auburn.edu>
 	* library.c: Listing for Argus Bean Sprout added, found
